Bug 1718118: Check that texture sharing works for the canvas device. r=jrmuizel a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D120706